# pqlattice

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  404.html  JOURNAL.md  LICENSE  README.md  gen_lattice.sage  gen_test_data.sage  index.html  mkdocs.yaml  objects.inv  pyproject.toml  pyrightconfig.json
.github/workflows/: docs.yaml  docs.yml  test.yaml
api/: index.html
api/integer/: index.html
api/lattice/: index.html
api/linalg/: index.html
api/polynomial/: index.html
api/pqlattice/: index.html
api/random/: index.html
api/typing/: index.html
development/coverage/: class_index.html  function_index.html  index.html  z_2b33e56ff1b2efee___init___py.html  z_2b33e56ff1b2efee__bkz_py.html  z_2b33e56ff1b2efee__cvp_py.html  z_2b33e56ff1b2efee__embeddings_py.html  z_2b33e56ff1b2efee__gso_py.html  z_2b33e56ff1b2efee__hkz_py.html  z_2b33e56ff1b2efee__lattice_py.html  z_2b33e56ff1b2efee__lll_py.html  z_2b33e56ff1b2efee__reductions_py.html  z_2b33e56ff1b2efee__svp_py.html  z_2b33e56ff1b2efee_embeddings_py.html  z_324020b0a73bd479___init___py.html  z_324020b0a73bd479__linalg_py.html  z_324020b0a73bd479__modint_py.html  z_324020b0a73bd479__utils_py.html  z_6a3cd1e1577d2ef9___init___py.html  z_6a3cd1e1577d2ef9__integer_py.html  z_6a3cd1e1577d2ef9__modintring_py.html  z_6a3cd1e1577d2ef9__modring_py.html  z_6a3cd1e1577d2ef9__primality_py.html  z_6a3cd1e1577d2ef9__primes_py.html  z_6f8f3ad254790462___init___py.html  z_6f8f3ad254790462__modpolyqring_py.html  z_6f8f3ad254790462__modpolyring_py.html  z_6f8f3ad254790462__poly_py.html  z_6f8f3ad254790462_poly_py.html  z_9a81f983795ad1fe___init___py.html  z_9a81f983795ad1fe__utils_py.html  z_a2dad495ffd37981___init___py.html  z_a2dad495ffd37981__types_py.html  z_a2dad495ffd37981__types_validator_py.html  z_d8ccc9f5390554d9___init___py.html  z_d8ccc9f5390554d9__distribution_py.html  z_d8ccc9f5390554d9__lattice_py.html  z_d8ccc9f5390554d9__lwe_py.html  z_d8ccc9f5390554d9__lwr_py.html  z_d8ccc9f5390554d9__prime_py.html  (+1 more)
development/testing/: index.html
docs/: index.md
docs/api/: index.md  integer.md  lattice.md  linalg.md  polynomial.md  pqlattice.md  random.md  typing.md
docs/development/: testing.md
docs/examples/: LWE_dual_attack.ipynb  LWE_primary_attack.ipynb  attacking_congruential_pkc.ipynb  attacking_discrete_knapsack_pkc.ipynb  constructing_and_attacking_GGH_pkc.ipynb  constructing_and_attacking_NTRU_pkc.ipynb
docs/getting-started/: quickstart.md
examples/LWE_dual_attack/: LWE_dual_attack.ipynb  index.html
examples/LWE_primary_attack/: index.html
examples/attacking_congruential_pkc/: attacking_congruential_pkc.ipynb  index.html
examples/attacking_discrete_knapsack_pkc/: index.html
examples/constructing_and_attacking_GGH_pkc/: index.html
examples/constructing_and_attacking_NTRU_pkc/: constructing_and_attacking_NTRU_pkc.ipynb  index.html
examples/toy_kyber/: index.html  toy_kyber.ipynb
sagemath/: run_sage_server.py  sage_interface.py
search/: search_index.json
src/pqlattice/: __init__.py  _utils.py  foo.py  settings.py  types.py  types_validator.py
src/pqlattice/_backends/: _fast.py
src/pqlattice/integer/: _IntModRing.py  _ModIntRing.py  __init__.py  _integer.py  _modintring.py  _modring.py  _primality.py  integer.py  modring.py
src/pqlattice/lattice/: _LLL.py  __init__.py  _bkz.py  _cvp.py  _embeddings.py  _gso.py  _hkz.py  _lattice.py  _lll.py  _reductions.py  _svp.py  embeddings.py
src/pqlattice/linalg/: __init__.py  _linalg.py  _modint.py  _utils.py
src/pqlattice/polynomial/: _modpoly.py  _modpolyqring.py  _modpolyring.py  _poly.py
src/pqlattice/random/: _distribution.py  _lattice.py  _lwe.py  _lwr.py  _prime.py  distribution.py
src/pqlattice/typing/: __init__.py  _types.py  _types_validator.py
tests/: conftest.py  oracle.py  run_sage_server.py  sage_interface.py  sage_server.py  strategies.py  test_foo.py  test_integer.py  test_modring.py  test_sage.py
tests/benchmark/: test_benchmark_LLL.py
tests/sage_data/lattice/: 10x10.json  11x11.json  12x12.json  13x13.json  14x14.json  15x15.json  5-50.json  5x5.json  6x6.json  7x7.json  8x8.json  9x9.json
tests/unit/test_integer/: test_ModIntRing.py  test_eea.py  test_integer.py  test_modintring.py  test_modring.py  test_primality.py  test_primes.py
tests/unit/test_lattice/: test_LLL.py  test_bkz.py  test_gso.py  test_hkz.py  test_lattice.py  test_lll.py  test_svp.py  (+1 more)
(+5 files in other folders)
