[project]
name = "pqlattice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mikołaj Leonhardt", email = "mikolaj.leonhardt@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    {include-group = "tests"},
    {include-group = "docs"},
    "notebook>=7.4.7",
    "pre-commit>=4.2.0",
    "ruff>=0.12.7",
]

docs = [
    "mkdocs>=1.6.1",
]

tests = [
    "hypothesis>=6.142.1",
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
testpaths = 'tests'

[tool.ruff]
line-length = 170
src = ["src", "tests"]
fix = true

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "N",    # pep8-naming
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "SIM",  # flake8-simplify
  "T20",  # flake8-print (warns on print/debug)
  "ARG",  # flake8-unused arguments
]
ignore = ["N802"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"
line-ending = "lf"
